[gd_scene load_steps=8 format=3 uid="uid://mainscene123"]

[ext_resource type="Script" uid="uid://dgoa5geladn3e" path="res://scripts/PolygonRoom.gd" id="1_room"]
[ext_resource type="Texture2D" uid="uid://cimiuh58asgku" path="res://assets/floor_industrial.png" id="2_floor"]
[ext_resource type="Texture2D" uid="uid://dmtomufb8r7o7" path="res://assets/wall_concrete.png" id="3_wall"]
[ext_resource type="Script" uid="uid://c4pl0nmsqmhj3" path="res://scripts/ShadowExtruder.gd" id="4_c01mt"]
[ext_resource type="PackedScene" uid="uid://b8x6yq4l4y4w" path="res://scenes/Player.tscn" id="4_player"]
[ext_resource type="PackedScene" uid="uid://c7x6yq4l4y50" path="res://scenes/Debris.tscn" id="5_debris"]
[ext_resource type="Texture2D" uid="uid://lbrsyy7qd0b" path="res://assets/light_texture.png" id="7_nxtc6"]

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.08, 0.08, 0.08, 1)

[node name="PolygonRoom" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_floor")
polygon = PackedVector2Array(207.99994, 296, 24, 295.99997, -8, 184.00003, -16, 40, -8, 6, 312, 0, 368, 24, 368, 104, 312, 136.00003, 320, 168.00003, 392, 176.00003, 456, 168.00003, 480, 96, 456, 32, 488, 8, 608, 8, 632, 16, 640, 96, 624, 136.00003, 624, 168.00003, 616, 208.00003, 616, 271.99997, 672, 303.99997, 712, 279.99997, 720, 224.00003, 688, 200.00003, 672, 160.00003, 656, 112, 672, 32, 728, 8, 784, 8, 896, 16, 952, 32, 1008, 128.00003, 968, 255.99997, 920, 279.99997, 840, 255.99997, 800, 192.00003, 760, 208.00003, 776, 279.99997, 800, 295.99997, 896, 343.99997, 936, 392.00003, 952, 464.00003, 984, 688, 912, 808.0001, 600, 720, 536, 560, 320, 616, 240, 776.0001, 168, 664, 208, 512, 344, 504.00003, 584, 480.00003, 664, 592, 800, 568, 808, 464.00003, 815.99994, 384, 800.00006, 336, 767.99994, 368, 640.00006, 392, 552.00006, 248.00002, 552.00006, 344, 440.00006, 336, 440.00006, 264, 448.00006, 216, 368.00006, 224, 312, 216, 336, 272, 304, 304, 264, 296, 256, 360, 336, 352, 352, 312, 408, 312, 400, 360, 384, 416, 384, 464.00003, 256, 472, 256, 400, 184, 408.00003, 112, 408.00003, 104, 656, 128.00006, 808, 952.00006, 872.00006, 976.00006, 992.00006, 64.00006, 984.0001, 32.00006, 824.00006, -8, 744, 8.000122, 320.00003, 119.99997, 320, 111.99997, 368, 200, 368)
uv = PackedVector2Array(207.99994, 296, 24, 295.99997, -8, 184.00003, -16, 40, 136, 8, 312, 0, 368, 24, 368, 104, 312, 136.00003, 320, 168.00003, 392, 176.00003, 456, 168.00003, 480, 96, 456, 32, 488, 8, 608, 8, 632, 16, 640, 96, 624, 136.00003, 624, 168.00003, 616, 208.00003, 616, 271.99997, 672, 303.99997, 712, 279.99997, 720, 224.00003, 688, 200.00003, 672, 160.00003, 656, 112, 672, 32, 728, 8, 784, 8, 896, 16, 952, 32, 1008, 128.00003, 968, 255.99997, 920, 279.99997, 840, 255.99997, 800, 192.00003, 760, 208.00003, 776, 279.99997, 800, 295.99997, 896, 343.99997, 936, 392.00003, 952, 464.00003, 984, 688, 912, 808.0001, 600, 720, 536, 560, 320, 616, 240, 776.0001, 168, 664, 208, 512, 344, 504.00003, 584, 480.00003, 664, 592, 800, 568, 808, 464.00003, 815.99994, 384, 800.00006, 336, 767.99994, 368, 640.00006, 392, 552.00006, 248.00002, 552.00006, 344, 440.00006, 336, 440.00006, 264, 448.00006, 216, 368.00006, 224, 312, 216, 336, 272, 304, 304, 264, 296, 256, 360, 336, 352, 352, 312, 408, 312, 400, 360, 384, 416, 384, 464.00003, 256, 472, 256, 400, 184, 408.00003, 112, 408.00003, 104, 656, 128.00006, 808, 952.00006, 872.00006, 976.00006, 992.00006, 64.00006, 984.0001, 32.00006, 824.00006, -8, 744, 8.000122, 320.00003, 119.99997, 320, 111.99997, 368, 200, 368)
script = ExtResource("1_room")
texture_wall = ExtResource("3_wall")

[node name="WallCollision" type="StaticBody2D" parent="PolygonRoom"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PolygonRoom/WallCollision"]
build_mode = 1
polygon = PackedVector2Array(207.99994, 296, 24, 295.99997, -8, 184.00003, -16, 40, -8, 6, 312, 0, 368, 24, 368, 104, 312, 136.00003, 320, 168.00003, 392, 176.00003, 456, 168.00003, 480, 96, 456, 32, 488, 8, 608, 8, 632, 16, 640, 96, 624, 136.00003, 624, 168.00003, 616, 208.00003, 616, 271.99997, 672, 303.99997, 712, 279.99997, 720, 224.00003, 688, 200.00003, 672, 160.00003, 656, 112, 672, 32, 728, 8, 784, 8, 896, 16, 952, 32, 1008, 128.00003, 968, 255.99997, 920, 279.99997, 840, 255.99997, 800, 192.00003, 760, 208.00003, 776, 279.99997, 800, 295.99997, 896, 343.99997, 936, 392.00003, 952, 464.00003, 984, 688, 912, 808.0001, 600, 720, 536, 560, 320, 616, 240, 776.0001, 168, 664, 208, 512, 344, 504.00003, 584, 480.00003, 664, 592, 800, 568, 808, 464.00003, 815.99994, 384, 800.00006, 336, 767.99994, 368, 640.00006, 392, 552.00006, 248.00002, 552.00006, 344, 440.00006, 336, 440.00006, 264, 448.00006, 216, 368.00006, 224, 312, 216, 336, 272, 304, 304, 264, 296, 256, 360, 336, 352, 352, 312, 408, 312, 400, 360, 384, 416, 384, 464.00003, 256, 472, 256, 400, 184, 408.00003, 112, 408.00003, 104, 656, 128.00006, 808, 952.00006, 872.00006, 976.00006, 992.00006, 64.00006, 984.0001, 32.00006, 824.00006, -8, 744, 8.000122, 320.00003, 119.99997, 320, 111.99997, 368, 200, 368)

[node name="WallVisuals" type="Line2D" parent="PolygonRoom"]
points = PackedVector2Array(207.99994, 296, 24, 295.99997, -8, 184.00003, -16, 40, -8, 6, 312, 0, 368, 24, 368, 104, 312, 136.00003, 320, 168.00003, 392, 176.00003, 456, 168.00003, 480, 96, 456, 32, 488, 8, 608, 8, 632, 16, 640, 96, 624, 136.00003, 624, 168.00003, 616, 208.00003, 616, 271.99997, 672, 303.99997, 712, 279.99997, 720, 224.00003, 688, 200.00003, 672, 160.00003, 656, 112, 672, 32, 728, 8, 784, 8, 896, 16, 952, 32, 1008, 128.00003, 968, 255.99997, 920, 279.99997, 840, 255.99997, 800, 192.00003, 760, 208.00003, 776, 279.99997, 800, 295.99997, 896, 343.99997, 936, 392.00003, 952, 464.00003, 984, 688, 912, 808.0001, 600, 720, 536, 560, 320, 616, 240, 776.0001, 168, 664, 208, 512, 344, 504.00003, 584, 480.00003, 664, 592, 800, 568, 808, 464.00003, 815.99994, 384, 800.00006, 336, 767.99994, 368, 640.00006, 392, 552.00006, 248.00002, 552.00006, 344, 440.00006, 336, 440.00006, 264, 448.00006, 216, 368.00006, 224, 312, 216, 336, 272, 304, 304, 264, 296, 256, 360, 336, 352, 352, 312, 408, 312, 400, 360, 384, 416, 384, 464.00003, 256, 472, 256, 400, 184, 408.00003, 112, 408.00003, 104, 656, 128.00006, 808, 952.00006, 872.00006, 976.00006, 992.00006, 64.00006, 984.0001, 32.00006, 824.00006, -8, 744, 8.000122, 320.00003, 119.99997, 320, 111.99997, 368, 200, 368, 207.99994, 296)
width = 16.0
texture = ExtResource("3_wall")
texture_mode = 1

[node name="ShadowExtruder" type="Node2D" parent="PolygonRoom"]
script = ExtResource("4_c01mt")

[node name="Player" parent="." instance=ExtResource("4_player")]
position = Vector2(100, 100)

[node name="Debris" parent="." instance=ExtResource("5_debris")]
position = Vector2(50, 50)
rotation = 0.5

[node name="Debris2" parent="." instance=ExtResource("5_debris")]
position = Vector2(150, 80)
rotation = 2.1

[node name="Debris3" parent="." instance=ExtResource("5_debris")]
position = Vector2(80, 200)

[node name="Debris4" parent="." instance=ExtResource("5_debris")]
position = Vector2(194.99995, 233.99997)
rotation = 1.0

[node name="Debris5" parent="." instance=ExtResource("5_debris")]
position = Vector2(280, 180)

[node name="lamp2" type="PointLight2D" parent="."]
position = Vector2(802, 145)
color = Color(0.91514367, 0.776603, 0, 1)
shadow_enabled = true
texture = ExtResource("7_nxtc6")

[node name="lamp3" type="PointLight2D" parent="."]
position = Vector2(835, 692)
color = Color(0.91514367, 0.776603, 0, 1)
shadow_enabled = true
texture = ExtResource("7_nxtc6")

[node name="lamp4" type="PointLight2D" parent="."]
position = Vector2(210, 690)
color = Color(0.91514367, 0.776603, 0, 1)
shadow_enabled = true
texture = ExtResource("7_nxtc6")

[node name="lamp" type="PointLight2D" parent="."]
position = Vector2(533, 182)
color = Color(0.91514367, 0.776603, 0, 1)
shadow_enabled = true
texture = ExtResource("7_nxtc6")

[node name="lamp5" type="PointLight2D" parent="."]
position = Vector2(774, 925)
color = Color(0.91514367, 0.776603, 0, 1)
shadow_enabled = true
texture = ExtResource("7_nxtc6")
